Fix for alignment of pride flag

--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -64,7 +64,7 @@
     position: absolute;
     left: 50%;
     bottom: 1.62em;
-    margin-left: -9px;
+    margin-left: -15px;
     @media screen and (min-width: 45.625em) {
       bottom: 1.72em;
     }
